:lipstick: Fix colour issue from dark mode

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -210,6 +210,8 @@ $red: #b1192b;
 @media (prefers-color-scheme: dark) {
   .input-wrapper {
     background-color: #333;
+    color: #f2f2f2;
+
     input {
       background-color: rgb(100, 100, 100);
     }
@@ -217,6 +219,7 @@ $red: #b1192b;
 
   .flight {
     background-color: #333;
+    color: #f2f2f2;
   }
 
   .flight-number {
